app/javascript/styles/application/organisms/_session-card.scss
.session-card {
  background: $white;

  &__label {
    font-size: rem-calc(12);
    text-transform: uppercase;
    color: $font-dark-tertiary;
    font-weight: $font-weight-medium;
    line-height: rem-calc(14);

    &.--dark {
      color: $font-dark-secondary;
    }
  }

  .icon {
    margin: 0;
  }
}

.session-card__container {
  display: flex;
  width: 100%;
  // max-height: 134px;
  height: 100%;
  padding: 12px;
  flex-wrap: wrap;
  color: $font-dark-primary;
  border-radius: 1px;

  @media #{$medium-up} {
    width: auto;
    margin: 6px;
  }
}

a .session-card {
  @include clickable;
}

.session-card__rating {
  flex: 1 1 auto;
  width: 12%;
}

.session-card__name {
  flex: 1 1 auto;
  width: 65%;
  margin-top: -3px; // attempt to align heading with rating (to the eye)

  h3,
  p {
    @include clip-text-one-line;
  }

  h3 {
    font-size: rem-calc(21);
    margin: 0;
    font-weight: $font-weight-medium;
    line-height: rem-calc(26);
  }
  p {
    font-size: rem-calc(14);
    margin: 0;
    color: $font-dark-tertiary;
    line-height: rem-calc(15);
  }
}

.session-card__updated {
  flex: 1 1 auto;
  max-width: 15%;
  text-align: right;
  font-size: rem-calc(11);
  line-height: rem-calc(11);
  color: $font-dark-secondary;
}

.session-card__conditions {
  flex: 1 1 auto;
  display: flex;
  width: 100%;
  margin-top: 4px;
}

.session-card__condition {
  flex: 1 1 33.33%;
  padding-right: rem-calc(6);

  &.--highlighted {
    color: $secondary-color;
  }
}

.session-card__updated {
  &.--highlighted {
    color: $secondary-color;
    // font-weight: $font-weight-bold;
  }
}

.session-card__condition-primary {
  display: block;
  font-size: 110%;
  font-weight: $font-weight-medium;
  word-break: break-word;

  &-unit {
    font-size: 80%;
  }
}

.session-card__condition-secondary {
  display: block;
  color: $font-dark-secondary;
  font-size: 80%;
  line-height: 120%;
}

/**
 * Vertical variant
**/

.spot-page__forecast {
  display: flex;

  .spot-page__forecast-left {
    flex: 1 1 auto;
    flex-basis: 20%;
  }
  .spot-page__forecast-right {
    flex: 1 1 auto;
    flex-basis: 80%;
  }
}

.session-card.--vertical {
  min-width: 132px;
  box-shadow: $shadow-subtle;

  .icon.--icon-navigation-2 {
    margin-right: -4px;
  }

  .session-card__container {
    max-height: none;
    margin-bottom: 12px;

    @media #{$large-up} {
      margin-top: 0;
    }
  }

  .session-card__rating {
    width: auto;
    display: flex;

    .session-card__label {
      // padding-left: 4px;
      display: none;
    }
  }

  .session-card__conditions {
    flex-wrap: wrap;
    flex-direction: row;
  }

  .session-card__condition {
    flex-basis: 100%;
  }

  .session-card__condition-primary {
    display: inline-block;
    width: 100%;
    margin-top: -5px;
  }

  .session-card__updated {
    max-width: none;
    margin-right: auto;
    text-align: left;
    padding-top: 6px;
  }

  .session-card__condition-primary {
    font-size: 130%;
  }

  .session-card__condition-secondary {
    font-size: 90%;
  }
}

